[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Entity/Entity.gd" type="Script" id=1]

[node name="Entity" type="Spatial"]
script = ExtResource( 1 )

[node name="ClickBody" type="StaticBody" parent="."]
collision_layer = 524288
collision_mask = 0
[connection signal="tree_exiting" from="." to="." method="_on_Entity_tree_exiting"]
[connection signal="input_event" from="ClickBody" to="." method="_on_ClickBody_input_event"]
[connection signal="mouse_entered" from="ClickBody" to="." method="_on_ClickBody_mouse_entered"]
[connection signal="mouse_exited" from="ClickBody" to="." method="_on_ClickBody_mouse_exited"]
